# baobab-mtg-rules-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 000_dev_constraints.md  001_specifications.md  dev_diary.md  release_readiness.md
docs/features/: 08_scenarios_replay_and_observability.md  09_triggered_abilities_core.md  10_activated_abilities_stack_and_costs.md  11_targeted_spells_damage_destruction_and_zone_changes.md  12_resolution_choices_and_decision_requests.md  13_continuous_effects_and_basic_modifiers.md  14_tokens_counters_and_battlefield_events.md  15_keyword_abilities_basic_combat_package.md  16_replacement_and_prevention_basic.md  17_advanced_targeting_and_modal_support.md  18_card_behavior_registry_and_data_driven_handlers.md  19_rules_conformance_and_regression_suite.md  20_multiplayer_core.md  21_commander_and_format_extensions.md
docs/tests/coverage/: README.md
examples/: replay_minimal_example.py
src/baobab_mtg_rules_engine/: __init__.py
src/baobab_mtg_rules_engine/actions/: __init__.py  activate_simple_ability_action.py  cast_spell_action.py  declare_attacker_action.py  declare_blocker_action.py  game_action.py  pass_priority_action.py  play_land_action.py  supported_action_kind.py
src/baobab_mtg_rules_engine/casting/: __init__.py  spell_cast_service.py
src/baobab_mtg_rules_engine/catalog/: __init__.py  baobab_mtg_catalog_adapter.py  card_definition_port.py  card_gameplay_port.py  in_memory_card_catalog_adapter.py
src/baobab_mtg_rules_engine/combat/: __init__.py  attacker_declaration_service.py  blocker_declaration_service.py  combat_service.py
src/baobab_mtg_rules_engine/domain/: __init__.py  ability_like.py  ability_on_stack.py  card_reference.py  effect_like.py  event_type.py  game.py  game_event.py  game_object.py  game_object_id.py  game_state.py  in_game_card.py  pending_triggered_ability.py  permanent.py  phase.py  player_state.py  spell_on_stack.py  step.py  triggered_ability_definition.py  triggered_ability_stack_object.py  turn_state.py  zone.py  zone_location.py  zone_type.py
src/baobab_mtg_rules_engine/engine/: __init__.py  legal_action_service.py  null_priority_action_legality_port.py  priority_action_legality_port.py  priority_manager.py  state_based_action_service.py  step_transition_service.py  trigger_detection_service.py  turn_manager.py
src/baobab_mtg_rules_engine/exceptions/: __init__.py  baobab_mtg_rules_engine_exception.py  deck_validation_error.py  illegal_game_action_error.py  insufficient_library_error.py  invalid_game_state_error.py  invalid_spell_target_error.py  replay_sequence_error.py  unsupported_rule_exception.py  validation_exception.py
src/baobab_mtg_rules_engine/observability/: __init__.py  game_state_inspector.py
src/baobab_mtg_rules_engine/replay/: __init__.py  game_replay_service.py  recorded_game_action.py
src/baobab_mtg_rules_engine/scenarios/: __init__.py  scenario_builder.py  scenario_context.py
src/baobab_mtg_rules_engine/setup/: __init__.py  callback_mulligan_choice.py  deck_definition.py  deck_validator.py  game_factory.py  game_setup_request.py  mulligan_choice_port.py  mulligan_policy.py
tests/: __init__.py
tests/baobab_mtg_rules_engine/: __init__.py  cast_spell_test_helpers.py  test_package_public_api.py
(+77 files in other folders)
