[build-system]
requires = ["setuptools>=69.0.0,<76.0.0", "wheel>=0.42.0,<1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baobab-mtg-rules-engine"
version = "0.1.0"
description = "Moteur de règles Magic: The Gathering déterministe et inspectable pour le projet Baobab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Baobab MTG" }]
keywords = ["magic-the-gathering", "rules-engine", "baobab"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.7,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "Flake8-pyproject>=1.2.3,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[project.urls]
Homepage = "https://github.com/baobab-mtg/baobab-mtg-rules-engine"
Documentation = "https://github.com/baobab-mtg/baobab-mtg-rules-engine/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baobab_mtg_rules_engine = ["py.typed"]

# --- black ---
[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(\\.venv|venv|build|dist)/"

# --- flake8 (via Flake8-pyproject) ---
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "venv", "build", "dist", "__pycache__", ".mypy_cache"]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
packages = ["baobab_mtg_rules_engine"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# --- pylint ---
[tool.pylint.main]
jobs = 0
py-version = "3.11"
fail-under = 10.0
source-roots = ["src"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 7
max-attributes = 12

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]

# --- pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=baobab_mtg_rules_engine",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html:docs/tests/coverage/html",
    "--cov-report=xml:docs/tests/coverage/coverage.xml",
]
markers = [
    "slow: tests plus lents (désélection: -m \"not slow\")",
]

# --- coverage ---
[tool.coverage.run]
branch = true
source = ["baobab_mtg_rules_engine"]
data_file = "docs/tests/coverage/.coverage"
omit = []

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "docs/tests/coverage/html"

[tool.coverage.xml]
output = "docs/tests/coverage/coverage.xml"
